--- a/templates/Home.html
+++ b/templates/Home.html
@@ -3,5 +3,5 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
   <h3>US Energy Information from 1949 to 2014</h3>
-  <p>This Website contains information concerning energy in the United States.</p>
+  <p>This json data set gives information on the consumption, production, import, and export of various fuel sources from 1949 to 2014.</p>
 {% endblock %}
