--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
-{% set active_page == home %}
+{% set active_page = 'home' %}
 {% block title %}Home Page{% endblock %}
 {% block content %}
   <h3>US Energy Information from 1949 to 2014</h3>
-  <p>This json data set gives information on the consumption, production, import, and export of various fuel sources from 1949 to 2014.</p>
+  <p>This Website contains information concerning energy in the United States between the years 1949 and 2014. This information includes imports of fuel sources such as oil and natural gas as well as exports.</p>
 {% endblock %}
