--- a/templates/Home.html
+++ b/templates/Home.html
@@ -3,5 +3,5 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
   <h3>US Energy Information from 1949 to 2014</h3>
-  <p>This Website contains information concerning energy in the United States between the years 1949 and 2014. This information includes imports of fuel sources such as oil and natural gas as well as exports.</p>
+  <p>This page contains information on energy consumption, production, importation, and exportation of various fuel sources. The data set is reported to be in the  quadrillion BTUs, which is alot. Throughout the data set as the years increase we can see that United States energy consumption is growing at a rapid rate causing more fossil fuels to be used. However as over energy consumption grows, the US Government has made decent progress in creating clean and renewable energy.</p>
 {% endblock %}
