--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,9 @@
      <div class="collapse navbar-collapse" id="mainNavBar">
       <ul class="nav navbar-nav">
         <li {% if active_page == "home" %} class = "active"{% endif %}><a href= "/.">Home</a></li>
+		<li {% if active_page == "facts" %} class = "active"{% endif %}><a href= "/facts">Imports</a></li>
+		<li {% if active_page == "export" %} class = "active"{% endif %}><a href= "/export">Exports</a></li>
+		<li {% if active_page == "consume" %} class = "active"{% endif %}><a href= "/consume">Consumtion</a></li>
       </ul>
     </div>
    </div>
