--- a/templates/facts.html
+++ b/templates/facts.html
@@ -3,6 +3,7 @@
 {% block title %}Fact Page 1{% endblock %}
 {% block content %}
   <h3>Fun Facts on Energy Imports</h3>
+<h1>Choose energy source and see the percent of it that was imported</h1>
   <p></p>
   
 {% endblock %}
