--- a/templates/facts.html
+++ b/templates/facts.html
@@ -4,7 +4,7 @@
 {% block content %}
   <h3>Fun Facts on Energy Imports</h3>
   <h7>Choose energy source and see the percent of it that was imported</h7>
-   <form action="/UsImprt2">
+   <form action="/facts">
     <select name="year">
       {{ year }}
     </select>
