--- a/templates/exports.html
+++ b/templates/exports.html
@@ -3,7 +3,7 @@
 {% block title %}Fact Page 2{% endblock %}
 {% block content %}
   <h3>Fun Facts on Energy Exports</h3>
-  <form action="/UsExprt2">
+  <form action="/render_third">
     <select name="year">
       {{ year }}
     </select>
