--- a/templates/consume.html
+++ b/templates/consume.html
@@ -3,7 +3,7 @@
 {% block title %}Fact Page 3{% endblock %}
 {% block content %}
   <h3>Fun Facts on Energy Consumtion</h3>
-   <form action="/UsConsume2">
+   <form action="/consume">
     <select name="year">
       {{ year }}
     </select>
