--- a/templates/consume.html
+++ b/templates/consume.html
@@ -10,7 +10,7 @@
    <br><br>
    <input type="submit">
    <br><br>
-   <h5>In year, the total amount of type used was</h5><p>{{ response }}</p>
+   <p>{{ response }}</p>
  </form>
   
 {% endblock %}
