--- a/templates/facts.html
+++ b/templates/facts.html
@@ -11,7 +11,7 @@
    <input type="submit">
    <br><br>
    <p>{{ response }}</p>
-     <img src="{{url_for('static',filename='download.jpg')}}" alt="dsfdsa">
+     <img src="{{url_for('static',filename='download.jpg')}}" alt="dsfdsa" height="42" width="42">
  </form>
   
 {% endblock %}
