--- a/templates/facts.html
+++ b/templates/facts.html
@@ -11,7 +11,7 @@
    <input type="submit">
    <br><br>
    <p>{{ response }}</p>
-     <img src="{{url_for('static',filename='download.jpg')}}" alt="dsfdsa" id = "importimg">
+     <img src="static/download.jpg" alt = "power" id = "importimg">
  </form>
   
 {% endblock %}
