--- a/templates/consume.html
+++ b/templates/consume.html
@@ -11,6 +11,7 @@
    <input type="submit">
    <br><br>
    <p>{{ response }}</p>
+      <img src="Energy-urban-energy-2000x1125.jpg" alt = "power" id = "consumeimg">
  </form>
   
 {% endblock %}
